--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title></title>
+ <title>Dashboard</title>
+ <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 </head>
 <body>
+
+<nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Express</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/dashboard">Dashboard</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>HOMEPAGE!</h1>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Login</h4>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              </div>
+              <button type="submit" class="btn btn-default">Login</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+     <script type="text/javascript" src="/js/jquery-1.12.0.min.js"></script>
+ <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+ <script type="text/javascript" src="/js/index.js"></script>
 
 </body>
 </html>
