--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/register">Register</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
